--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ body{
 }
 </style>
 <script src="https://cdn.rawgit.com/mrdoob/three.js/master/build/three.min.js"></script>
-<script src="http://threejs.org/examples/js/loaders/OBJLoader.js"></script>
-<script src="http://simpletruthsforhealthyliving.com/js/OrbitControls.js"></script>
+<script src="https://threejs.org/examples/js/loaders/OBJLoader.js"></script>
+<script src="https://simpletruthsforhealthyliving.com/js/OrbitControls.js"></script>
 <script type="text/javascript" src="main.js"></script>
 </head>
 <body onload="start()">
